# poker44-miner-v3

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
detector/: __init__.py  features.py  fetch_benchmark.py  inference.py
detector/artifacts/: meta.json
neurons/: miner.py
scripts/: ecosystem.config.js  run_miner.sh
