[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poker44-miner-v3"
version = "3.0.0"
description = "Bot-detection miner for Poker44 (Bittensor subnet 126)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "bittensor",
    "pydantic>=2.6",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "catboost>=1.2",
]

[project.optional-dependencies]
train = ["scipy>=1.10"]

[tool.setuptools]
packages = ["poker44", "detector"]
